--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,17 @@
       the License.
       -->
     <string name="app_name">AndroidDevChallenge</string>
+    <string name="log_in">log in</string>
+    <string name="sign_up">sign up</string>
+    <string name="logo">logo</string>
+    <string name="email_address">Email address</string>
+    <string name="password">Password</string>
+    <string name="no_account">Dont have an account?</string>
+    <string name="search">search</string>
+    <string name="favorite_collections">favorite collections</string>
+    <string name="align_your_body">align your body</string>
+    <string name="align_your_mind">align your mind</string>
+    <string name="play">Play</string>
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
 </resources>
